# Luddite-Editor

./: .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  README.md
Assets/Materials/: AssetList.yaml
Assets/Models/: pingpong.fbx
Assets/Models/KioMiku_blender_20091010/: testmodel.blend
Assets/Shaders/: Test.ldshader
TestProject/: CMakeLists.txt
TestProject/src/: GameInstance.cpp  Layers.hpp
TestProject/src/Layers/: BaseLayer.cpp  BaseLayer.hpp
src/Editor/: App.cpp  EditorState.hpp  Events.hpp  GameInstance.cpp  GameInstance.hpp  GameInstanceCompiler.cpp  GameInstanceCompiler.hpp  History.hpp  Input.hpp  Keybinds.hpp  RCCppLogger.cpp  RCCppLogger.hpp  Runtime.hpp  SystemTable.h
src/Editor/Commands/: Commands.hpp
src/Editor/ECS/: ComponentDescription.hpp
src/Editor/ECS/Components/: Components.hpp  SelectedEntity.hpp
src/Editor/Layers/: BaseLayer.cpp  BaseLayer.hpp  EditorLayer.cpp  EditorLayer.hpp  Layers.hpp
src/Editor/Panels/: AssetBrowserPanel.hpp  ComponentsEditor.hpp  ComponentsPanel.hpp  Panel.hpp  ScenePanel.hpp  ViewportPanel.hpp
